[gd_scene load_steps=3 format=3 uid="uid://c6wroaqhgwlbv"]

[ext_resource type="Script" path="res://ui/collections/add_to_collection_dialog/add_to_collection.gd" id="1_wkjjs"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_dagm2"]

[node name="AddToCollection" type="Window"]
size = Vector2i(220, 260)
min_size = Vector2i(200, 200)
script = ExtResource("1_wkjjs")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dagm2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FilterEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Collections"

[node name="CollectionsList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add"

[node name="AlreadyInCollectionError" type="AcceptDialog" parent="."]
size = Vector2i(313, 100)
dialog_text = "The image is already in that collection."

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/FilterEdit" to="." method="_on_edit_filter_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButton" to="." method="_on_btn_add_pressed"]
